<resources>
    <string name="app_name">Silver+</string>

    <string name="contact">Contact</string>
    <string name="objectDetection">Detection</string>
    <string name="speak">Speak</string>
    <string name="gaze">Gaze</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="dialog">Dialog</string>
    <string name="notification">Notification</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="main">Main</string>

    <string name="rationale_init">APP Needs some Permission</string>
    <string name="permissions_denied_content_str">Permission Denied \nOpen Setting to Modify APP Permission</string>
    <string name="need_permissions_str">Permission Required</string>

    <string name="possible_answer">Possible Answers:</string>
    <string name="t2keyboard">T2 Keyboard</string>
    <string name="t26keyboard">T26 Keyboard</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>

    <string name="action_start_chat">Start Chat</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>

    <string name="action_send">Send</string>
    <string name="action_back">Back</string>
    <string name="action_prev">Prev</string>
    <string name="action_next">Next</string>

    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>

    <string name="action_start_calibration">Start Calibration</string>
    <string name="action_muscle_sensor">Muscle Sensor</string>
    <string name="action_logout">Logout</string>

    <string name="action_eye_tracking_mode">Eye Tracking</string>
    <string name="action_muscle_control_mode">Muscle Control</string>

    <string name="action_default_mode">Default</string>
    <string name="action_bluetooth_mode">Bluetooth</string>
    <string name="action_socket_mode">Socket</string>

    <string name="gaze_capturing">Gaze Capturing...</string>
</resources>
