<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_title_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_toolbar_back"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/notification"
            android:textColor="@color/BLACK"
            android:textSize="30sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/BLACK"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_title_container">

        <View
            android:id="@+id/split_line1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerVertical="true" />

        <com.shehuan.niv.NiceImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_above="@+id/split_line1"
            app:border_color="@color/light_green"
            app:border_width="5dp"
            app:is_circle="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/split_line1">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textColor="@color/BLACK"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/chat_line"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:background="@drawable/rl_dialog_shape"
                android:layout_width="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_height="56dp">

                <TextView
                    android:id="@+id/tv_message"
                    android:layout_width="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="20sp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:textColor="@color/BLACK" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pb_gaze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_btn_container"
        style="@style/pb_gaze"
        android:progressDrawable="@drawable/pb_gaze"/>

    <LinearLayout
        android:id="@+id/ll_btn_container"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_start_chat"
            android:background="@drawable/btn_round_corner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/action_start_chat"
            android:textColor="@color/WHITE"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:background="@drawable/btn_round_corner"
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/action_cancel"
            android:textColor="@color/WHITE"
            android:textSize="20sp" />

    </LinearLayout>

    <com.example.enactusapp.EyeTracker.PointView
        android:id="@+id/pv_point"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>